Fix responsive issue w/ body content being too wide

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -35,6 +35,7 @@ body {
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  word-wrap: break-word;
 }
 
 // .page-content {
